Audit services code cleanup #3262